[package]
name = "bandwith"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Lightweight Windows bandwidth monitor (per-process, per-domain) with ETW capture and SQLite storage"
license = "MIT OR Apache-2.0"

[lib]
name = "bandwith"
path = "src/lib.rs"

[[bin]]
name = "bandwith"
path = "src/main.rs"

# Cross-platform (pure Rust, no system deps):
[dependencies]
rusqlite    = { version = "0.40", features = ["bundled"] }
tokio       = { version = "1", features = ["rt-multi-thread","macros","time","sync"] }
hickory-resolver = "0.26"
moka        = { version = "0.12", features = ["future"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
dirs        = "6"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
anyhow      = "1"
thiserror   = "2"
clap        = { version = "4", features = ["derive"] }

[features]
# Enables `spawn_in_tempfile` helper for integration tests. Off in release builds.
test-support = ["dep:tempfile"]

[dependencies.tempfile]
version = "3"
optional = true

# Windows-only GUI stack (eframe/egui/tray-icon all pull GTK on Linux via wayland/wgpu):
[target.'cfg(windows)'.dependencies]
eframe      = "0.31"
egui        = "0.31"
egui_plot   = "0.31"
tray-icon   = "0.24"
ferrisetw   = "1.2"
windows     = { version = "0.58", features = ["Win32_System_Threading","Win32_System_SystemInformation","Win32_System_ProcessStatus","Win32_Foundation","Win32_System_Diagnostics_Etw"] }

[dev-dependencies]
# Pull in `tempfile` via the test-support feature so the lib's test helper
# (`spawn_in_tempfile`) can use it.
bandwith = { path = ".", features = ["test-support"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
